syntax = "proto3";

package proto; 
import "google/protobuf/empty.proto";

message Request {
}

message Response {
	double average_response_time = 1;

	message STATS_PER_ROUTE {

		message ID {
			string method = 1;
			string url = 2;
		}

		ID id = 1;
		int64 number_of_requests = 2;
	}

	repeated STATS_PER_ROUTE stats_per_route = 2;

	message REQUESTS_PER_DAY {
		string id = 1;
		int64 number_of_requests = 2;
	}

	repeated REQUESTS_PER_DAY requests_per_day = 3;

	message REQUESTS_PER_HOUR {
		string id = 1;
		int64 number_of_requests = 2;
	}

	repeated REQUESTS_PER_HOUR requests_per_hour = 4;
	int64 total_requests = 5;
}


service Analytics {
    rpc AnalyticsService (google.protobuf.Empty) returns (Response);
}